--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
     <title>React Jest Enzyme Test</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="sr-app"></div>
   </body>
 </html>
